--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -3,26 +3,141 @@
 
     <div class="w-full grid grid-cols-20/80">
 
-
-        <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+        <div>
+          <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white mb-8">
             <button id="catalogs-button" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-              Catalogs
+                Catalogs
             </button>
-            <button id="offers-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
+            <button id="offers-button" class="block w-full px-4 py-2 border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
               Offers
             </button>
+          </div>
+  
+          <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <button id="prod-spec-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
               Product Specifications
             </button>
             <button id="sev-spec-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
                 Service Specifications
             </button>
-            <button id="res-spec-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
+            <button id="res-spec-button" class="block w-full px-4 py-2 border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
                 Resource Specifications
             </button>
+          </div>
         </div>
 
+
         <div>
+          <div class="w-full h-fit mb-4 bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-gray-300 border-secondary-50 border flex flex-col shadow-lg">
+            <div class="flex w-full flex-col items-center md:flex-row justify-between">
+              <div class="mb-4 md:mb-0 md:w-1/4 p-8">
+                <h2 class="text-2xl font-bold mb-4">Catalogs</h2>
+              </div>
+              <form class="max-w-lg w-1/2 pr-4 z-10">
+                <div class="relative">
+                    <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-white shadow rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
+                    placeholder="Filter products..." />
+                    <button type="submit" (click)="filterInventoryByKeywords()" class="absolute shadow top-0 end-0 inline-flex items-center p-2.5 text-sm font-medium h-full text-white bg-primary-100 rounded-e-lg hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300">
+                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                        </svg>                  
+                        <span class="ml-2">Search</span>
+                    </button>
+                </div>
+              </form>
+            </div>
+            <div class="flex w-full flex-col items-center md:flex-row justify-between">
+
+              <div class="p-8 w-full">
+                <div class="flex flex-row mb-1">
+                  <fa-icon [icon]="faSwatchbook" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
+                  <h2 class="text-base font-bold">Filter by state</h2>
+                  </div>
+                  <button id="dropdownDefault" data-dropdown-toggle="dropdown"
+                  class="text-black w-full justify-between shadow bg-white border border-gray-300 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center"
+                  type="button">
+                  Filter by state
+                  <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                  </svg>
+                  </button>
+                  
+                  <div id="dropdown" class="z-20 hidden w-1/5 p-3 bg-white rounded-lg shadow">
+                  <h6 class="mb-3 text-sm font-medium text-gray-900">
+                      State
+                  </h6>
+                  <ul class="space-y-2 text-sm" aria-labelledby="dropdownDefault">
+        
+                      <li class="flex items-center">
+                      <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('active')"
+                          class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
+          
+                      <label for="active" class="ml-2 text-sm font-medium text-gray-900">
+                          Active
+                      </label>
+                      </li>
+          
+                      <li class="flex items-center">
+                      <input id="launched" type="checkbox" value="" (change)="onStateFilterChange('launched')"
+                          class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
+          
+                      <label for="launched" class="ml-2 text-sm font-medium text-gray-900">
+                          Launched
+                      </label>
+                      </li>
+          
+                      <li class="flex items-center">
+                      <input id="retired" type="checkbox" value="" (change)="onStateFilterChange('retired')"
+                          class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
+          
+                      <label for="retired" class="ml-2 text-sm font-medium text-gray-900">
+                          Retired
+                      </label>
+                      </li>
+
+                      <li class="flex items-center">
+                        <input id="obsolete" type="checkbox" value="" (change)="onStateFilterChange('obsolete')"
+                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
+            
+                        <label for="obsolete" class="ml-2 text-sm font-medium text-gray-900">
+                            Obsolete
+                        </label>
+                      </li>
+                  </ul>
+                </div>
+            </div> 
+
+
+            <div class="p-8 w-full">
+              <div class="flex flex-row mb-1">
+                <fa-icon [icon]="faIdCard" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
+                <h2 class="text-base font-bold">Filter by role</h2>
+              </div>
+              <select id="countries" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <option selected>Filter by role</option>
+                <option value="all">All</option>
+                <option value="seller">Seller</option>
+                <option value="owner">Owner</option>
+              </select>
+            </div>
+
+            <div class="p-8 w-full">
+              <div class="flex flex-row mb-1">
+                <fa-icon [icon]="faSort" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
+                <h2 class="text-base font-bold">Order by...</h2>
+              </div>
+              <select id="countries" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <option selected>Order by...</option>
+                <option value="update">Last update</option>
+                <option value="name">Name</option>
+              </select>
+            </div>
+
+
+          </div>
+        </div>
+
         </div>
     </div>
 </div>
