FIX product description scroll + ADD all sections to my offerings

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -34,7 +34,7 @@
                 <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
                 </a>
             </div>
-            <markdown class="pt-2 line-clamp-2 dark:text-gray-600" [data]="productOff?.description"></markdown>
+            <markdown class="pt-2 line-clamp-2 max-h-16 dark:text-gray-600" [data]="productOff?.description"></markdown>
             <div class="grid grid-cols-2">
                 <div class="min-h-19 pt-2 dark:text-gray-600">V: {{productOff?.version || 'latest'}}</div>
                 <div class="flex items-center justify-end">
@@ -306,33 +306,6 @@
                             </div>
                         </div>
                     }
-                    <div class="w-1/3 px-4 mb-8">                
-                        <div class="border border-gray-200 rounded-lg shadow bg-white shadow-md p-8 h-full">
-                            <h3 class="text-2xl font-bold mb-4">Relación prueba</h3>                                
-                            <div class="flex justify-between">
-                                <p class="mb-2 font-normal pl-4 text-gray-700">Migration</p>
-                                <fa-icon [icon]="faArrowRightArrowLeft" class="fa-2xl text-primary-100 align-middle"></fa-icon>                                
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-1/3 px-4 mb-8">                
-                        <div class="border border-gray-200 rounded-lg shadow bg-white shadow-md p-8 h-full">
-                            <h3 class="text-2xl font-bold mb-4">Relación prueba 2</h3>                                
-                            <div class="flex justify-between">
-                                <p class="mb-2 font-normal pl-4 text-gray-700">exclusivity</p>
-                                <fa-icon [icon]="faObjectExclude" class="fa-2xl text-primary-100 align-middle"></fa-icon>                               
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-1/3 px-4 mb-8">                
-                        <div class="border border-gray-200 rounded-lg shadow bg-white shadow-md p-8 h-full">
-                            <h3 class="text-2xl font-bold mb-4">Relación prueba 3</h3>                                
-                            <div class="flex justify-between">
-                                <p class="mb-2 font-normal pl-4 text-gray-700">Substitution</p>
-                                <fa-icon [icon]="faSwap" class="fa-2xl text-primary-100 align-middle"></fa-icon>                                
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         }        
