--- a/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
@@ -52,7 +52,7 @@
             <ul class="space-y-2 text-sm" aria-labelledby="dropdownDefault">
   
                 <li class="flex items-center">
-                <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('active')"
+                <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('Active')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="active" class="ml-2 text-sm font-medium text-gray-900">
@@ -61,7 +61,7 @@
                 </li>
     
                 <li class="flex items-center">
-                <input id="launched" type="checkbox" value="" (change)="onStateFilterChange('launched')"
+                <input id="launched" type="checkbox" value="" checked (change)="onStateFilterChange('Launched')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="launched" class="ml-2 text-sm font-medium text-gray-900">
@@ -70,7 +70,7 @@
                 </li>
     
                 <li class="flex items-center">
-                <input id="retired" type="checkbox" value="" (change)="onStateFilterChange('retired')"
+                <input id="retired" type="checkbox" value="" (change)="onStateFilterChange('Retired')"
                     class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
     
                 <label for="retired" class="ml-2 text-sm font-medium text-gray-900">
@@ -79,7 +79,7 @@
                 </li>
 
                 <li class="flex items-center">
-                  <input id="obsolete" type="checkbox" value="" (change)="onStateFilterChange('obsolete')"
+                  <input id="obsolete" type="checkbox" value="" (change)="onStateFilterChange('Obsolete')"
                       class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
       
                   <label for="obsolete" class="ml-2 text-sm font-medium text-gray-900">
@@ -93,11 +93,11 @@
 
       <div class="p-8 w-full">
         <div class="flex flex-row mb-1">
-          <fa-icon [icon]="faIdCard" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
+          <fa-icon [icon]="faSparkles" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
           <h2 class="text-base font-bold">Filter by type</h2>
         </div>
-        <select id="countries" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-          <option selected>Filter by type</option>
+        <select id="type" (change)="onTypeChange($event)" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+          <option value="none" selected>Filter by type</option>
           <option value="all">All</option>
           <option value="simple">Simple</option>
           <option value="bundle">Bundle</option>
@@ -109,8 +109,8 @@
           <fa-icon [icon]="faSort" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
           <h2 class="text-base font-bold">Order by...</h2>
         </div>
-        <select id="countries" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-          <option selected>Order by...</option>
+        <select id="sort" (change)="onSortChange($event)" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+          <option value="none" selected>Order by...</option>
           <option value="update">Last update</option>
           <option value="name">Name</option>
         </select>
@@ -120,73 +120,104 @@
     </div>
   </div>
 
-  <div class="bg-secondary-50 dark:bg-white mt-8 p-4 rounded-lg">
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-100 ">
-                <tr>
-                    <th scope="col" class="px-6 py-3">
-                        Name
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                        Status
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                        Type
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                        Last update
-                    </th>
-                    <th scope="col" class="px-6 py-3">
-                        Actions
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (offer of offers; track offer.id) {
-                    <tr class="border-b hover:bg-gray-200">
-                        <td class="px-6 py-4">
-                            {{offer.name}}
-                        </td>
-                        <td class="px-6 py-4">
-                            @if(offer.lifecycleStatus == 'Active'){
-                                <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{offer.lifecycleStatus}}</span>
-                            } @else if(offer.lifecycleStatus == 'Launched') {
-                                <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{offer.lifecycleStatus}}</span>
-                            } @else if(offer.lifecycleStatus == 'Retired') {
-                                <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{offer.lifecycleStatus}}</span>
-                            } @else if(offer.lifecycleStatus == 'Obsolete') {
-                                <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{offer.lifecycleStatus}}</span>
-                            }
-                        </td>
-                        <td class="px-6 py-4">
-                            @if(offer.isBundle == false){
-                                <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">Simple</span>
-                            } @else {
-                                <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">Bundle</span>
-                            }
-                        </td>
-                        <td class="px-6 py-4">
-                            {{offer.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
-                        </td>
-                        <td class="px-6 py-4">
-                            <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
-                                <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
-                                </svg>
-                            </button>
-                            <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
-                                <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
-                                    <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-                                  </svg>                                  
-                            </button>
-                        </td>
+@if(loading){
+    <div role="status" class="w-full h-full flex justify-center align-middle">
+        <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+            <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+        </svg>
+        <span class="sr-only">Loading...</span>
+      </div>
+} @else {
+    <div class="bg-secondary-50 dark:bg-white mt-8 p-4 rounded-lg">
+        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-100 ">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">
+                            Name
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Status
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Type
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Last update
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Actions
+                        </th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-  </div>
+                </thead>
+                <tbody>
+                    @for (offer of offers; track offer.id) {
+                        <tr class="border-b hover:bg-gray-200">
+                            <td class="px-6 py-4">
+                                {{offer.name}}
+                            </td>
+                            <td class="px-6 py-4">
+                                @if(offer.lifecycleStatus == 'Active'){
+                                    <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{offer.lifecycleStatus}}</span>
+                                } @else if(offer.lifecycleStatus == 'Launched') {
+                                    <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{offer.lifecycleStatus}}</span>
+                                } @else if(offer.lifecycleStatus == 'Retired') {
+                                    <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{offer.lifecycleStatus}}</span>
+                                } @else if(offer.lifecycleStatus == 'Obsolete') {
+                                    <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{offer.lifecycleStatus}}</span>
+                                }
+                            </td>
+                            <td class="px-6 py-4">
+                                @if(offer.isBundle == false){
+                                    <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">Simple</span>
+                                } @else {
+                                    <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">Bundle</span>
+                                }
+                            </td>
+                            <td class="px-6 py-4">
+                                {{offer.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
+                            </td>
+                            <td class="px-6 py-4">
+                                <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                                    <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                        <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
+                                    </svg>
+                                </button>
+                                <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                                    <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
+                                        <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                                      </svg>                                  
+                                </button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        @if (!loading_more) {
+            @if (page_check) {
+            <div class="flex pt-6 pb-2 justify-center align-middle">
+                <button (click)="next()" class="flex cursor-pointer shadow-lg items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700">
+                Load more
+                <svg class="w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
+                </svg>
+                </button>
+            </div>
+            }
+        } @else {
+            <div role="status" class="w-full h-full flex justify-center align-middle mt-2">
+            <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+                <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+            </svg>
+            <span class="sr-only">Loading...</span>
+            </div>
+        }
+      </div>
+}
+
 
 </div>
