ADD user's offerings + product specification template form wip

--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -91,7 +91,7 @@
         </div>        
         <!-- END FILTERS -->
         <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border">
-            <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PROFILE._order_list' | translate }}:</h5>
+            <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PROFILE._order_list' | translate }}</h5>
             <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
                 <div class="m-4 relative overflow-x-auto shadow-md sm:rounded-lg">
                     <table class="w-full text-sm text-left rtl:text-right text-gray-500 rounded-lg">
